--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - "3.6"
 script:
-   - python -m unittest tests.assignments.test_assign2 -v
+    - python -m unittest tests.homework.test_homework1 -v 
 
 
